
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct objagg_obj {int dummy; } ;
struct mlxsw_sp_acl_erp_mask {int dummy; } ;
struct mlxsw_sp_acl_erp {TYPE_2__* erp_table; } ;
struct mlxsw_sp_acl_atcam_region {int dummy; } ;
struct mlxsw_sp_acl_atcam_entry {int dummy; } ;
struct mlxsw_sp {int dummy; } ;
struct TYPE_4__ {TYPE_1__* erp_core; } ;
struct TYPE_3__ {int bf; } ;


 int mlxsw_sp_acl_bf_entry_add (struct mlxsw_sp*,int ,struct mlxsw_sp_acl_atcam_region*,unsigned int,struct mlxsw_sp_acl_atcam_entry*) ;
 unsigned int mlxsw_sp_acl_erp_bank_get (struct mlxsw_sp_acl_erp const*) ;
 int mlxsw_sp_acl_erp_table_is_used (TYPE_2__*) ;
 struct mlxsw_sp_acl_erp* objagg_obj_root_priv (struct objagg_obj*) ;

int mlxsw_sp_acl_erp_bf_insert(struct mlxsw_sp *mlxsw_sp,
          struct mlxsw_sp_acl_atcam_region *aregion,
          struct mlxsw_sp_acl_erp_mask *erp_mask,
          struct mlxsw_sp_acl_atcam_entry *aentry)
{
 struct objagg_obj *objagg_obj = (struct objagg_obj *) erp_mask;
 const struct mlxsw_sp_acl_erp *erp = objagg_obj_root_priv(objagg_obj);
 unsigned int erp_bank;

 if (!mlxsw_sp_acl_erp_table_is_used(erp->erp_table))
  return 0;

 erp_bank = mlxsw_sp_acl_erp_bank_get(erp);
 return mlxsw_sp_acl_bf_entry_add(mlxsw_sp,
     erp->erp_table->erp_core->bf,
     aregion, erp_bank, aentry);
}
